[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Play.gd" type="Script" id=1]
[ext_resource path="res://Fonts/HarlowSolidItalic.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/dialogue/DialogueBox.gd" type="Script" id=3]
[ext_resource path="res://Art/1x/DialogBox.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/coolvetica rg.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[node name="Play" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 2.0
margin_right = 1280.0
margin_bottom = 726.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.4248
margin_bottom = 3.4248

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 483.0
margin_top = 270.0
margin_right = 797.0
margin_bottom = 456.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 314.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Play Scene"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 314.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="DialogueBox" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 430.0
margin_right = 1.0
margin_bottom = -5.0
script = ExtResource( 3 )

[node name="DialogBox" type="Sprite" parent="DialogueBox"]
position = Vector2( 639.76, 167.028 )
scale = Vector2( 1.32967, 0.607462 )
texture = ExtResource( 4 )

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox"]
margin_left = 37.0
margin_top = 64.0
margin_right = 1251.0
margin_bottom = 272.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
scroll_active = false

[node name="Panel" type="Panel" parent="DialogueBox"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -245.0
margin_bottom = -1.0
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="update_background" from="DialogueBox" to="." method="_on_DialogueBox_update_background"]
